# claude_runner

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
docs/decisions/: 0000-template.md  0001-default-regime-pro-max.md  0002-ccusage-as-budget-source.md  0003-one-yaml-per-task.md  0004-asyncio-default-subprocess-fallback.md  0005-effort-tier-encoding.md  0006-circuit-breaker-on-failures.md  0007-stop-hook-as-completion-signal.md  0008-dynamic-discovery-cache.md  0009-minimal-required-fields.md  README.md
src/claude_runner/: __init__.py  __main__.py  cli.py  config.py  defaults.py  models.py  scaffold.py
src/claude_runner/budget/: calibrate.py  circuit_breaker.py  controller.py  windows.py
src/claude_runner/budget/sources/: __init__.py  api_headers.py  ccusage.py  claude_usage.py  context_cmd.py
src/claude_runner/git/: __init__.py  worktree.py
src/claude_runner/notify/: emitter.py
src/claude_runner/runner/: asyncio_backend.py  backend.py  preamble.py  scheduler.py  stop_hook.py  subprocess_backend.py
src/claude_runner/sidecar/: __init__.py  schema.py  store.py
src/claude_runner/state/: lock.py  store.py
src/claude_runner/todo/: catalog.py  loader.py  schema.py
tests/: conftest.py  test_asyncio_backend.py  test_budget_controller.py  test_budget_sources.py  test_budget_windows.py  test_calibrate.py  test_circuit_breaker.py  test_cli.py  test_cli_filters_and_awaiting.py  test_cli_input.py  test_config.py  test_defaults_effort.py  test_emitter.py  test_initial_concurrency.py  test_main_entrypoint.py  test_models.py  test_preamble.py  test_scaffold.py  test_scheduler.py  test_scheduler_dispatch.py  test_scheduler_dispatch_extra.py  test_scheduler_internals.py  test_scheduler_wait.py  test_sidecar_store.py  test_sidecar_store_extra.py  test_state_lock.py  test_state_resume.py  test_state_store.py  test_stop_hook.py  test_stop_hook_sidecar.py  test_subprocess_backend.py  test_todo_catalog.py  test_todo_schema.py  test_worktree.py  test_worktree_extra.py
